--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
+    "react-sparklines": "^1.7.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3"
   }
